[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cogutil"
version = "0.0.1"
description = "cogutil"
authors = [{ name = "Minkyu Choi", email = "minkyu.choi@coargus.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gdown",
    "wget",
    "omegaconf"

]

[project.optional-dependencies]
dev = ["black", "flake8", "mypy"]
test = ["pytest>=6.0", "pytest-cov"]

[project.urls]
homepage = "https://github.com/Coargus/cogutil"
documentation = "https://github.com/Coargus/cogutil/docs"
repository = "https://github.com/Coargus/cogutil"
